# python-sdk

./: pyproject.toml
signupshield/: __init__.py  client.py  exceptions.py  types.py
