[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "signupshield"
version = "1.4.0"
description = "Official Python SDK for SignupShield — stop fake signups with one API call"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["signupshield", "email-validation", "fraud-prevention", "signup-protection"]
dependencies = [
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "respx>=0.21",
  "mypy>=1.10",
  "ruff>=0.5",
]

[project.urls]
Homepage = "https://signupshield.dev"
Repository = "https://github.com/signupshield/signupshield"
Documentation = "https://signupshield.dev/docs"

[tool.hatch.build.targets.wheel]
packages = ["signupshield"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
strict = true
python_version = "3.9"
